[fix](480): spacing

--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,8 @@ img {
 @media screen and (max-width: 480px){
     .row{
         flex-direction: column;
+        gap: 50px;
     }
-    .container,
     .lessons .col,
     .steps .col ,
     .why-us .col-left ,
